--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>welcome</title>
+  <style>
 
+  
+  </style>
+</head>
+  <body>
+<h1>test</h1>
+    
+  </body>
+
+  
+</html>
